volexc/tests/ui/service_duplicate_index.vol
// Duplicate method index in service

message Request {}
message Response {}

service Foo {
    fn bar(Request) -> Response = 1;
    fn baz(Request) -> Response = 1;
}
